# faiss

./: .gitignore  download_datasets.py  hnsw_simulation.py  nixos.md  pseudo.md  run_efficiency.py  run_latency_recall.py  shell.nix
experiments/: CMakeCache.txt  CMakeLists.txt  calibrate.cpp  conann_calibrated_params.txt  efficiency.cpp  experiment_results.csv  experiment_results_term_budget.csv  ground_truth.cpp  hnsw_cached_benchmarks.cpp  iteralphas.sh  latency_recall.cpp  main_exp.sh  normalization_bug.py  remaining_active_indices.csv  resume_benchmark.csv  risk_vs_lambda.csv  run_benchmark.sh  run_conHNSW.cpp  sample.cpp  sample_all.sh  search.cpp  simple_hnsw.cpp  termination_calibration.cpp
faiss/: IndexHNSW.cpp  IndexHNSW.h
faiss/impl/: HNSW.cpp  HNSW.h
results/: CMakeCache.txt  plot.py  plot_hnsw_cached.py  plot_latency_reall.py  plot_termation_test.py  risklambda.py
results/latency_recall/: hnsw.json  naiveES-100.json  naiveES-12.json  naiveES-200.json  naiveES-25.json  naiveES-50.json  naiveES-6.json  naiveES-75.json
